--- a/prac/package.json
+++ b/prac/package.json
@@ -19,6 +19,8 @@
     "firebase": "^9.15.0",
     "http-proxy-middleware": "^2.0.6",
     "jsonp": "^0.2.1",
+    "less": "^4.1.3",
+    "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
@@ -26,12 +28,11 @@
     "react-google-charts": "^4.0.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "store": "^2.0.12",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4",
-    "moment": "^2.29.4",
-    "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
