--- a/prac/package.json
+++ b/prac/package.json
@@ -32,6 +32,7 @@
     "slick-carousel": "^1.8.1",
     "store": "^2.0.12",
     "typescript": "^4.7.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
