--- a/pracex/package.json
+++ b/pracex/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +12,13 @@
   "dependencies": {
     "blueimp-md5": "^2.19.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "moment-timezone": "^0.5.40",
     "mongoose": "^5.13.15",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
